<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/AppBasic">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/S_02_title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="47dp"
        android:id="@+id/textView5"
        android:layout_alignParentTop="true"
        android:autoText="false"
        tools:layout_alignParentTop="false"
        style="@style/SystemTitle" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/S_02_start_button"
        android:id="@+id/start_button"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="102dp"
        android:onClick="onClickStartButton (MainActivity)"
        style="@style/S02Button" />

    <TextView
        android:text="@string/S_02_start_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView7"
        style="@style/S02Text" />

    <Button
        android:layout_height="wrap_content"
        android:text="@string/S_02_end_button"
        android:id="@+id/end_button"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="102dp"
        android:onClick="onClickStartButton"
        android:layout_width="wrap_content"
        style="@style/S02Button" />

    <TextView
        android:text="@string/S_02_end_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView9"
        style="@style/S02Text" />

    <Button
        android:layout_height="wrap_content"
        android:text="@string/S_02_procedure_button"
        android:id="@+id/confirm_button"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="102dp"
        android:layout_width="wrap_content"
        style="@style/S02YellowButton" />

    <TextView
        android:text="@string/S_02_procedure_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView10"
        style="@style/S02Text" />
</LinearLayout>