<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.masterkdk.methodverification.MainActivity"
    style="@style/AppBasic">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/S_01_title"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="47dp"
        android:id="@+id/textView"
        style="@style/S01Title" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/S_01_menu"
        android:id="@+id/menu_button"
        android:onClick="onClickMenuButton (MainActivity)"
        android:layout_alignBaseline="@+id/textView"
        android:layout_alignBottom="@+id/textView"
        android:layout_alignParentStart="true"
        style="@style/S01YellowButton" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/S_01_update"
        android:id="@+id/update_button"
        android:onClick="onClickStartButton"
        android:layout_alignBaseline="@+id/textView"
        android:layout_alignBottom="@+id/textView"
        android:layout_alignParentEnd="true"
        style="@style/S01YellowButton" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/menu_button"
        android:layout_alignParentStart="true"
        android:layout_marginTop="28dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TableLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/table_tablet"
                style="@style/S01TableTablet">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:text="@string/S_01_table_tablet_column1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView6"
                        style="@style/S01TableColumnTablet" />

                    <TextView
                        android:text="@string/S_01_table_tablet_column2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView15"
                        style="@style/S01TableColumnTablet" />
                </TableRow>

            </TableLayout>

            <TextView
                android:text="@string/S_01_text_procedure"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView4"
                style="@style/S01TitleProcedure" />

            <TableLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/table_procedure"
                style="@style/S01TableProcedure">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <TextView
                        android:text="@string/S_01_table_procedure_column1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView3"
                        style="@style/S01TableColumnProcedure" />

                    <TextView
                        android:text="@string/S_01_table_procedure_column2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView16"
                        style="@style/S01TableColumnProcedure" />

                    <TextView
                        android:text="@string/S_01_table_procedure_column3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView17"
                        style="@style/S01TableColumnProcedure" />

                    <TextView
                        android:text="@string/S_01_table_procedure_column4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView18"
                        style="@style/S01TableColumnProcedure" />

                    <TextView
                        android:text="@string/S_01_table_procedure_column5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView20"
                        style="@style/S01TableColumnProcedure" />

                    <TextView
                        android:text="@string/S_01_table_procedure_column6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView19"
                        style="@style/S01TableColumnProcedure" />

                    <TextView
                        android:text="@string/S_01_table_procedure_column7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView21"
                        style="@style/S01TableColumnProcedure" />

                    <TextView
                        android:text="@string/S_01_table_procedure_column8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView22"
                        style="@style/S01TableColumnProcedure" />

                </TableRow>

            </TableLayout>

        </LinearLayout>
    </ScrollView>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/S_01_start"
        android:id="@+id/start_button"
        android:onClick="onClickStartButton"
        style="@style/S01Button"
        android:layout_marginBottom="15dp"
        android:layout_alignParentBottom="true"
        android:layout_toStartOf="@+id/update_button" />

</RelativeLayout>
