<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/AppBasic"
    android:layout_centerVertical="false"
    android:layout_centerHorizontal="false">

    <TextView
        android:text="@string/S_xx_procedure_end_text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView11"
        android:textColor="@color/colorText"
        android:layout_gravity="center_horizontal|center_vertical"
        android:textSize="45sp"
        android:paddingTop="250dp" />

    <TextView
        android:text="@string/S_xx_procedure_end_text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView12"
        android:textColor="@color/colorText"
        android:layout_gravity="center_horizontal|center_vertical"
        android:textSize="45sp" />

    <TextView
        android:text="@string/S_xx_procedure_end_text3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView13"
        android:textColor="@color/colorText"
        android:layout_gravity="center_horizontal|center_vertical"
        android:textSize="45sp" />

    <TextView
        android:text="@string/S_xx_procedure_end_text4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView14"
        android:textColor="@color/colorText"
        android:layout_gravity="center_horizontal|center_vertical"
        android:textSize="45sp" />

    <TextView
        android:text="@string/S_xx_procedure_end_text5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView15"
        android:textColor="@color/colorText"
        android:layout_gravity="center_horizontal|center_vertical"
        android:textSize="45sp"
        android:paddingBottom="50dp"/>

    <Button
        android:text="@string/S_03_OK_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/S03YellowButton"
        android:id="@+id/ok_button" />
</LinearLayout>